tests/snapshots/snapshots__markdown_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# precis
     5→## Installation
