tests/snapshots/snapshots__markdown_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# precis
     3→A CLI tool that extracts a token-efficient summary of a codebase.
     5→## Installation
     7→```bash
     8→cargo install precis
     9→```
    11→## Usage
    13→### Basic Usage
    15→Run on a directory to get a summary:
      →…
    21→### Options
    23→| Flag | Description |
      →…
    28→## Supported Languages
    30→- Rust
    31→- TypeScript / JavaScript
    32→- Python
    33→- Markdown
    35→### Adding a New Language
    37→1. Add a tree-sitter grammar dependency
      →…
    41→## Contributing
    45→## License
