tests/snapshots/snapshots__markdown_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
README.md
     1→# precis
     3→A CLI tool that extracts a token-efficient summary of a codebase.
     4→
     5→## Installation
    11→## Usage
