tests/snapshots/snapshots__python_sample_budget_20.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
    21→class Visitor …
    29→class TokenParser …
