tests/snapshots/snapshots__python_sample_budget_200.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
     5→T …
     7→# Process the input items and return the total count.
     8→def process_items(items: list[str]) -> int:
    15→class Token …
    21→class Visitor …
    22→    def visit_token(self, token: Token) -> None:
    25→    def visit_all(self, tokens: list[Token]) -> None:
    29→class TokenParser …
    34→
    35→    MAX_TOKENS: int = 1024
    36→
    37→    def __init__(self, source: str) -> None:
    42→    def parse(self) -> list[Token]:
    47→    def from_file(cls, path: str) -> "TokenParser[T]":
    54→VERSION …
