tests/snapshots/snapshots__python_sample_budget_50.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
     8→def process_items …
    21→class Visitor …
    29→class TokenParser …
    37→    def __init__ …
    42→    def parse …
