tests/snapshots/snapshots__python_sample_level3.snap
---
source: tests/snapshots.rs
expression: output
---
sample.py
     5→T = TypeVar("T")
     7→# Process the input items and return the total count.
     8→def process_items(items: list[str]) -> int:
    11→def _helper() -> None:
    14→@dataclass
    15→class Token:
    20→# A visitor that walks over tokens.
    21→class Visitor:
    22→    def visit_token(self, token: Token) -> None:
    25→    def visit_all(self, tokens: list[Token]) -> None:
    29→class TokenParser(Generic[T]):
    30→    """A generic token parser.
    37→    def __init__(self, source: str) -> None:
    38→        """Initialize the parser with source text."""
    42→    def parse(self) -> list[Token]:
    43→        """Parse and return the token list."""
    46→    @classmethod
    47→    def from_file(cls, path: str) -> "TokenParser[T]":
    51→    def _advance(self) -> None:
    54→VERSION: str = "0.1.0"
